@@ -415,7 +415,7 @@ public class DbConnectionDialog extends javax.swing.JDialog {
 			ci.alias = "Demo Scott";
 			ci.driverClass = "org.h2.Driver";
 			ci.jar1 = "lib" + File.separator + "h2-1.3.160.jar";
-			ci.url = "jdbc:h2:demo-scott";
+			ci.url = "jdbc:h2:" + Environment.newFile("demo-scott").getPath();
 			ci.user = "sa";
 			ci.password = "";
 			ci.dataModelFolder = "Demo-Scott";
@@ -427,7 +427,7 @@ public class DbConnectionDialog extends javax.swing.JDialog {
 			ci.alias = "Demo Sakila";
 			ci.driverClass = "org.h2.Driver";
 			ci.jar1 = "lib" + File.separator + "h2-1.3.160.jar";
-			ci.url = "jdbc:h2:demo-sakila";
+			ci.url = "jdbc:h2:" + Environment.newFile("demo-sakila").getPath();
 			ci.user = "sa";
 			ci.password = "";
 			ci.dataModelFolder = "Demo-Sakila";
