@@ -1,6 +1,7 @@
 7.0.2
   - Fixed an NPE in MetaDataCache.
   - User's home directory is used for setup, configuration and log files.
+  - Prevent exception if oracle.xdb.XMLTypeFactory is missing.
 
 7.0.1
   - MS SQL Server datetime issue has been fixed. (https://sourceforge.net/p/jailer/discussion/700499/thread/5773eb1c/ )
